[package]
name = "cell_tower"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smallvec = "1.8"
colored = "2.0"
isahc = { version = "1.7", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
